
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_space">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="25.000" />


            <ImageView
                android:id="@+id/scoreFrame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/scoreframe3" />

            <TextView
                android:id="@+id/targetScoreLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                tools:text="96.000" />
        </LinearLayout>

        <!--android:text="@string/target_score" -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="345.000"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/targetScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="666.660"
                android:visibility="invisible" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp">

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:text="@string/time"
                android:textColor="@android:color/holo_orange_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/timeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="42sp"
                tools:text="79" />

            <ImageView
                android:id="@+id/imageViewNext"
                style="@style/image_view_style"
                android:layout_gravity="right"

                />


        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:columnCount="@string/column_size_default"
                android:rowCount="@string/row_size_default">

                <ImageView
                    android:id="@+id/imageView_1_1"
                    style="@style/image_view_style"
                    android:layout_row="0"
                    android:layout_column="0" />

                <ImageView
                    android:id="@+id/imageView_1_2"
                    style="@style/image_view_style"
                    android:layout_row="0"
                    android:layout_column="1" />

                <ImageView
                    android:id="@+id/imageView_1_3"
                    style="@style/image_view_style"
                    android:layout_row="0"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/imageView_1_4"
                    style="@style/image_view_style"
                    android:layout_row="0"
                    android:layout_column="3" />

                <ImageView
                    android:id="@+id/imageView_1_5"
                    style="@style/image_view_style"
                    android:layout_row="0"
                    android:layout_column="4" />

                <ImageView
                    android:id="@+id/imageView_2_1"
                    style="@style/image_view_style"
                    android:layout_row="1"
                    android:layout_column="0" />

                <ImageView
                    android:id="@+id/imageView_2_2"
                    style="@style/image_view_style"
                    android:layout_row="1"
                    android:layout_column="1" />

                <ImageView
                    android:id="@+id/imageView_2_3"
                    style="@style/image_view_style"
                    android:layout_row="1"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/imageView_2_4"
                    style="@style/image_view_style"
                    android:layout_row="1"
                    android:layout_column="3" />

                <ImageView
                    android:id="@+id/imageView_2_5"
                    style="@style/image_view_style"
                    android:layout_row="1"
                    android:layout_column="4" />


                <ImageView
                    android:id="@+id/imageView_3_1"
                    style="@style/image_view_style"
                    android:layout_row="2"
                    android:layout_column="0" />

                <ImageView
                    android:id="@+id/imageView_3_2"
                    style="@style/image_view_style"
                    android:layout_row="2"
                    android:layout_column="1" />

                <ImageView
                    android:id="@+id/imageView_3_3"
                    style="@style/image_view_style"
                    android:layout_row="2"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/imageView_3_4"
                    style="@style/image_view_style"
                    android:layout_row="2"
                    android:layout_column="3" />

                <ImageView
                    android:id="@+id/imageView_3_5"
                    style="@style/image_view_style"
                    android:layout_row="2"
                    android:layout_column="4" />

                <ImageView
                    android:id="@+id/imageView_4_1"
                    style="@style/image_view_style"
                    android:layout_row="3"
                    android:layout_column="0" />

                <ImageView
                    android:id="@+id/imageView_4_2"
                    style="@style/image_view_style"
                    android:layout_row="3"
                    android:layout_column="1" />

                <ImageView
                    android:id="@+id/imageView_4_3"
                    style="@style/image_view_style"
                    android:layout_row="3"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/imageView_4_4"
                    style="@style/image_view_style"
                    android:layout_row="3"
                    android:layout_column="3" />

                <ImageView
                    android:id="@+id/imageView_4_5"
                    style="@style/image_view_style"
                    android:layout_row="3"
                    android:layout_column="4" />

                <ImageView
                    android:id="@+id/imageView_5_1"
                    style="@style/image_view_style"
                    android:layout_row="4"
                    android:layout_column="0" />

                <ImageView
                    android:id="@+id/imageView_5_2"
                    style="@style/image_view_style"
                    android:layout_row="4"
                    android:layout_column="1" />

                <ImageView
                    android:id="@+id/imageView_5_3"
                    style="@style/image_view_style"
                    android:layout_row="4"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/imageView_5_4"
                    style="@style/image_view_style"
                    android:layout_row="4"
                    android:layout_column="3" />

                <ImageView
                    android:id="@+id/imageView_5_5"
                    style="@style/image_view_style"
                    android:layout_row="4"
                    android:layout_column="4" />


            </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/totalScoreLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_score"
                    android:visibility="invisible" />


                <TextView
                    android:id="@+id/bestLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/best"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/levelLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/level"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    tools:text="547.879" />

                <TextView
                    android:id="@+id/best"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="785.200" />

                <TextView
                    android:id="@+id/level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="3"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
        l
    </LinearLayout>


    <ImageView
        android:id="@+id/floatingPieceView"
        style="@style/floating_piece_view_style"
        android:layout_gravity="left|top"
        android:background="@drawable/border_transp"
        android:src="@drawable/circle_red"
        android:visibility="invisible" />

</FrameLayout>